--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -4,8 +4,11 @@
 <div class="wrapper wrapper-content">
     <div class="alert alert-danger alert-dismissable">
         <button aria-hidden="true" data-dismiss="alert" class="close" type="button">×</button>
-        <div>尊敬的会员<span id="weather"></span></div>
+        <div>通知<span id="weather"></span></div>
     </div>
+    <blockquote class="layui-elem-quote layui-quote-nm">
+        尊敬的会员{$username}
+    </blockquote>
 
     <!-- 上方tab -->
     <div class="row">
@@ -32,7 +35,7 @@
                     <h5>订单</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">275,800</h1>
+                    <h1 class="no-margins">8,800</h1>
                     <small>总订单</small>
                 </div>
             </div>
@@ -40,13 +43,17 @@
         <div class="col-sm-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
+                    <a href="#question">
+                        <i class="fa fa-question" style="color:red;margin-left:10px" data-container="body" data-toggle="popover" data-placement="bottom"
+                           data-content="注册会员数量！【点击问号关闭】"></i>
+                    </a>
                     <span class="label pull-right">日</span>
                     <span class="label pull-right">周</span>
                     <span class="label label-success pull-right">月</span>
                     <h5>注册</h5>
                 </div>
                 <div class="ibox-content">
-                    <h1 class="no-margins">106,120</h1>
+                    <h1 class="no-margins">1,120</h1>
                     <small>新增</small>
                 </div>
             </div>
@@ -94,16 +101,16 @@
             <div class="col-sm-6">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <i class="fa fa-cogs"></i> 系统信息
+                        <i class="fa fa-cogs"></i> 官方信息
                     </div>
                     <div class="panel-body">
-                        <p><i class="fa fa-send-o"></i> 博客：<a href="http://ilunhui.cn" target="_blank">http://ilunhui.cn</a>
+                        <p><i class="fa fa-send-o"></i> 博客：<a href="http://94h.org" target="_blank">http://94h.org</a>
                         </p>
-                        <p><i class="fa fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=864491238&amp;site=qq&amp;menu=yes" target="_blank">864491238</a>
+                        <p><i class="fa fa-qq"></i> QQ：<a href="http://wpa.qq.com/msgrd?v=3&amp;uin=254731051&amp;site=qq&amp;menu=yes" target="_blank">254731051</a>
                         </p>
-                        <p><i class="fa fa-weixin"></i> 微信：<a href="javascript:;">18693281982</a>
+                        <p><i class="fa fa-weixin"></i> 微信：<a href="javascript:;">tpx2014</a>
                         </p>
-                        <p><i class="fa fa-credit-card"></i> 支付宝：<a href="javascript:;" class="支付宝信息">864491238@qq.com / *建龙</a>
+                        <p><i class="fa fa-credit-card"></i> 支付宝：<a href="javascript:;" class="支付宝信息">254731051@qq.com / *生功</a>
                         </p>
                     </div>
                 </div>
