--- a/application/admin/view/menu/edit_menu.html
+++ b/application/admin/view/menu/edit_menu.html
@@ -19,7 +19,7 @@
                     </div>
                 </div>
                 <div class="ibox-content">
-                    <form class="form-horizontal m-t" name="edit_rule" id="edit_rule" method="post" action="{:url('edit_rule')}">
+                    <form class="form-horizontal m-t" name="edit_rule" id="edit_rule" method="post" action="{:url('edit_menu')}">
                         <input type="hidden" name="id" value="{$menu.id}">
                         <div class="form-group">
                             <label class="col-sm-3 control-label">菜单名称：</label>
