--- a/application/admin/view/position/index.html
+++ b/application/admin/view/position/index.html
@@ -12,7 +12,17 @@
                     <div class="input-group" >  
                         <a href="{:url('add_position')}"><button class="btn btn-outline btn-primary" type="button">添加广告位</button></a> 
                     </div>
-                </div>                                                                    
+                </div>
+                    <form name="admin_list_sea" class="form-search" method="post" action="{:url('index')}">
+                        <div class="col-sm-3">
+                            <div class="input-group">
+                                <input type="text" id="key" class="form-control" name="key" value="{$val}" placeholder="输入需查询广告位标题" />
+                                <span class="input-group-btn">
+                                    <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> 搜索</button>
+                                </span>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
             <div class="hr-line-dashed"></div>
