--- a/application/admin/view/ad/edit_ad.html
+++ b/application/admin/view/ad/edit_ad.html
@@ -48,6 +48,20 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
+                            <label class="col-sm-3 control-label">广告位：</label>
+                            <div class="input-group col-sm-4">
+                                <select class="form-control m-b chosen-select" name="ad_position_id" id="ad_position_id">
+                                    <option value="{$ad.ad_position_id}">{$ad:name}</option>
+                                    {if !empty($position)}
+                                    {foreach name="position" item="vo"}
+                                    <option value="{$vo.id}">{$vo.name}</option>
+                                    {/foreach}
+                                    {/if}
+                                </select>
+                            </div>
+                        </div>
+                        <div class="hr-line-dashed"></div>
+                        <div class="form-group">
                             <label class="col-sm-3 control-label">链接地址：</label>
                             <div class="input-group col-sm-4">
                                 <input id="link_url" type="text" class="form-control" value="{$ad.link_url}" name="link_url" placeholder="请输入广告链接地址">
