--- a/application/admin/view/member/group.html
+++ b/application/admin/view/member/group.html
@@ -132,12 +132,12 @@ function edit_group(id){
 
 //删除会员组
 function del_group(id){
-    lunhui.confirm(id,'{:url("del_group")}');
+    youkang.confirm(id,'{:url("del_group")}');
 }
 
 //会员组状态
 function group_status(id){
-    lunhui.status(id,'{:url("group_status")}');
+    youkang.status(id,'{:url("group_status")}');
 }
 
 </script>
