--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -157,12 +157,12 @@ function edit_member(id){
 
 //删除会员
 function del_member(id){
-    lunhui.confirm(id,'{:url("del_member")}');
+    youkang.confirm(id,'{:url("del_member")}');
 }
 
 //用户会员
 function member_status(id){
-    lunhui.status(id,'{:url("member_status")}');
+    youkang.status(id,'{:url("member_status")}');
 }
 
 </script>
