--- a/application/member/view/login/register.html
+++ b/application/member/view/login/register.html
@@ -69,7 +69,7 @@
                     <div class="help-block">密码不能少于六位！</div>
                 </div>
                 <div class="form-group col-sm-6 w3-agile">
-                    <input type="password" name="password" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword"
+                    <input type="password" name="rePassword" class="form-control" id="inputPasswordConfirm" data-match="#inputPassword"
                            data-match-error="请重复密码" placeholder="重复密码" data-error="重复密码" required>
                     <div class="help-block with-errors"></div>
                 </div>
